Bug 329195 - Shade selector bars break when using the "Reset foreground and background color" shortcut
Summary: Shade selector bars break when using the "Reset foreground and background col...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 2.8 Beta
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-24 12:54 UTC by Michel T Gonzalez
Modified: 2013-12-28 14:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michel T Gonzalez 2013-12-24 12:54:26 UTC
When the chosen foreground/background colors are on default (black/white), pressing D as the "Reset foreground and background color" shortcut will erroneously change the shade selector bars to shades of white, instead of leaving the shades of black.

In order to reproduce this:
1- Create a new file
2- Press D
3- Note the shade bars changed. The actual chosen colors haven't changed though.
Comment 1 Dmitry Kazakov 2013-12-25 09:28:44 UTC
Yep, the Advanced Color Selector seems to be set to White color after the shortcut :(
Reproducible on Linux.
Comment 2 Dmitry Kazakov 2013-12-25 11:16:12 UTC
Git commit 3812222dfc029b24771d2c24da5f40c840b48037 by Dmitry Kazakov.
Committed on 25/12/2013 at 11:15.
Pushed by dkazakov into branch 'master'.

Fix the wrong color being set up when pressing 'D' shortcut

Some of color selectors do not differentiate foreground
and background colors, so if one wants them to end up
being set up to foreground color, it should be set the
last.

M  +14   -4    krita/ui/tool/kis_tool.cc

http://commits.kde.org/calligra/3812222dfc029b24771d2c24da5f40c840b48037
Comment 3 Dmitry Kazakov 2013-12-28 14:57:29 UTC
Git commit f8c4b9ec1c1a9834f24e2ae56fc0b533d4e6beee by Dmitry Kazakov.
Committed on 25/12/2013 at 11:15.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix the wrong color being set up when pressing 'D' shortcut

Some of color selectors do not differentiate foreground
and background colors, so if one wants them to end up
being set up to foreground color, it should be set the
last.

M  +14   -4    krita/ui/tool/kis_tool.cc

http://commits.kde.org/calligra/f8c4b9ec1c1a9834f24e2ae56fc0b533d4e6beee