Fix the wrong color being set up when pressing 'D' shortcut

Some of color selectors do not differentiate foreground
and background colors, so if one wants them to end up
being set up to foreground color, it should be set the
last.

BUG:329195