krita/ui/tool/kis_tool.cc
@@ -647,16 +647,26 @@ void KisTool::resetCursorStyle()
 void KisTool::slotToggleFgBg()
 {
     KoCanvasResourceManager* resourceManager = canvas()->resourceManager();
-    KoColor c = resourceManager->foregroundColor();
-    resourceManager->setForegroundColor(resourceManager->backgroundColor());
-    resourceManager->setBackgroundColor(c);
+    KoColor newFg = resourceManager->backgroundColor();
+    KoColor newBg = resourceManager->foregroundColor();
+
+    /**
+     * NOTE: Some of color selectors do not differentiate foreground
+     *       and background colors, so if one wants them to end up
+     *       being set up to foreground color, it should be set the
+     *       last.
+     */
+    resourceManager->setBackgroundColor(newBg);
+    resourceManager->setForegroundColor(newFg);
 }
 
 void KisTool::slotResetFgBg()
 {
     KoCanvasResourceManager* resourceManager = canvas()->resourceManager();
-    resourceManager->setForegroundColor(KoColor(Qt::black, KoColorSpaceRegistry::instance()->rgb8()));
+
+    // see a comment in slotToggleFgBg()
     resourceManager->setBackgroundColor(KoColor(Qt::white, KoColorSpaceRegistry::instance()->rgb8()));
+    resourceManager->setForegroundColor(KoColor(Qt::black, KoColorSpaceRegistry::instance()->rgb8()));
 }
 
 
